# riftbound-card-ai

./: .gitignore  README.md  cardata.json  pyproject.toml  todo.txt
src/processing/: gallery.py  read_card.py
