[project]
name = "riftdb"
version = "0.1.0"
description = "Default template for PDM package"
authors = [
    {name = "babydragon2", email = "thefoolsequence9@gmail.com"},
]
dependencies = ["opencv-python>=4.12.0.88", "pytesseract>=0.3.13", "requests>=2.32.5"]
requires-python = ">=3.10"
readme = "README.md"
license = {text = "MIT"}

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"


[tool.pdm]
distribution = true
